--- a/main.html
+++ b/main.html
@@ -8,6 +8,28 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<header><h1>Pathan</h1></header>
+    <nav> <a href="https://en.wikipedia.org/wiki/Shah_Rukh_Khan" id="nav-actor">Sharuk khan</a> </nav>
+    <nav> <a href="https://www.goodreads.com/quotes/tag/pathan#" id="nav-quote">Quotes</a> </nav>
+    
+    <summary>The Acting is best in the film</summary>
+    <section>
+        <nav id = "actor" href="https://en.wikipedia.org/wiki/Shah_Rukh_Khan">Sharuk khan</nav>
+        <h2>Details about actors in movie</h2>
+        <p>Actors of the movie sharuk khan,john abrahim</p>
+    </section>
+    <section>
+        <nav id = "quote" href="https://www.goodreads.com/quotes/tag/pathan#">Quote</nav>
+            <h2>My favourite quote of movie</h2>
+            <p>Honesty is the best policy.</p>
+    </section>
+    <aside>
+        <h4>imdb rating and release date</h4>
+        <p>7.4/10 imdb rating and 12th February 2022</p>
+    </aside>
+    <footer>
+        <p>"Produced by: &lt Aditya chopra &gt"</p>
+    </footer>
     <script type="text/javascript" src="./script.js">
 </script>
 
